--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,5 +20,21 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Print identity to confirm connection
+      - name: Print identity to verify AWS credentials
         run: aws sts get-caller-identity
+
+      - name: Add SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
+      - name: Deploy to EC2
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+            echo " Logged in successfully"
+            cd /home/ubuntu/my-app || mkdir my-app && cd my-app
+            git pull origin main || git clone https://github.com/Anita-ani/clean-devops-project.git .
+            docker compose down || true
+            docker compose up -d --build
+          EOF
